# KDMR

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/robots/: booster_t1.yaml  unitree_g1.yaml  unitree_h1.yaml
configs/solver/: scp_ddp_config.yaml
kdmr/: __init__.py
kdmr/contact/: __init__.py  contact_estimator.py  contact_mode.py  grf_processor.py
kdmr/core/: __init__.py  cost_functions.py  scp_ddp_solver.py  trajectory_optimizer.py
kdmr/dynamics/: __init__.py  constraints.py  contact_dynamics.py  rigid_body_dynamics.py
kdmr/retargeting/: __init__.py  kdmr_retaret.py  kinematic_retarget.py
kdmr/utils/: __init__.py  data_loader.py  math_utils.py  visualization.py
scripts/: compare_with_gmr.py  evaluate_metrics.py  run_kdmr.py
tests/: test_contact.py  test_dynamics.py  test_optimizer.py
