[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kdmr"
version = "0.1.0"
description = "Kinodynamic Motion Retargeting for Humanoid Locomotion"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "KDMR Team", email = "kdmr@example.com"}
]
keywords = ["robotics", "motion-retargeting", "humanoid", "trajectory-optimization", "mujoco"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "mujoco>=3.0.0",
    "mink>=0.0.5",
    "cvxpy>=1.3.0",
    "matplotlib>=3.5.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]
all = [
    "casadi>=3.6.0",
    "torch>=2.0.0",
    "imageio>=2.0.0",
    "smplx>=0.1.28",
]

[project.urls]
Homepage = "https://github.com/kdmr/kdmr"
Documentation = "https://github.com/kdmr/kdmr#readme"
Repository = "https://github.com/kdmr/kdmr.git"
Issues = "https://github.com/kdmr/kdmr/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kdmr*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
